swagger users routes completed
